Fix merge conflicts
Signed-off-by: shedaniel <daniel@shedaniel.me>