@@ -38,7 +38,6 @@ import java.util.List;
 import java.util.function.UnaryOperator;
 
 import com.google.common.collect.ImmutableMap;
-import org.apache.logging.log4j.util.Strings;
 import org.gradle.api.logging.Logger;
 
 import net.fabricmc.loom.util.function.CollectionUtil;
@@ -55,7 +54,7 @@ public final class AtRemapper {
 			Path atPath = fs.getPath("META-INF/accesstransformer.cfg");
 
 			if (Files.exists(atPath)) {
-				String atContent = new String(Files.readAllBytes(atPath), StandardCharsets.UTF_8);
+				String atContent = Files.readString(atPath);
 
 				String[] lines = atContent.split("\n");
 				List<String> output = new ArrayList<>(lines.length);
@@ -63,7 +62,7 @@ public final class AtRemapper {
 				for (int i = 0; i < lines.length; i++) {
 					String line = lines[i].trim();
 
-					if (line.startsWith("#") || Strings.isBlank(line)) {
+					if (line.startsWith("#") || line.isBlank()) {
 						output.add(i, line);
 						continue;
 					}
